[gd_scene load_steps=3 format=3 uid="uid://equipment_menu"]

[ext_resource type="Script" path="res://Items/EquipmentMenu.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://ddo7ybrfl5d2s" path="res://fonts/FUSION-PIXEL-12PX-MONOSPACED-ZH_HANS.OTF" id="2_font"]

[node name="EquipmentMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "装备系统"
horizontal_alignment = 1

[node name="LeftPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -200.0
offset_right = 360.0
offset_bottom = 200.0
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentList" type="VBoxContainer" parent="LeftPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="LeftPanel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "返回"

[node name="BubbleContainer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 360.0
offset_top = -200.0
offset_right = 760.0
offset_bottom = 200.0
grow_vertical = 2

[node name="BubbleArrow" type="Polygon2D" parent="BubbleContainer"]
color = Color(0.15, 0.15, 0.25, 1)
polygon = PackedVector2Array(-20, 50, 0, 35, 0, 65)

[node name="RightPanel" type="Panel" parent="BubbleContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="BubbleContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentName" type="Label" parent="BubbleContainer/RightPanel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 22
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
text = "装备名称"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="BubbleContainer/RightPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "装备描述"
autowrap_mode = 2

[node name="StatusLabel" type="Label" parent="BubbleContainer/RightPanel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 1

[node name="EquipButton" type="Button" parent="BubbleContainer/RightPanel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "装备"
