extends Control

## è£…å¤‡ç•Œé¢ - ç®¡ç†å’Œé€‰æ‹©è£…å¤‡

@onready var title_label = $TitleLabel
@onready var equipment_list = $LeftPanel/VBox/EquipmentList
@onready var back_button = $LeftPanel/VBox/BackButton
@onready var bubble_container = $BubbleContainer
@onready var detail_panel = $BubbleContainer/RightPanel
@onready var bubble_arrow = $BubbleContainer/BubbleArrow
@onready var detail_name = $BubbleContainer/RightPanel/VBox/EquipmentName
@onready var detail_desc = $BubbleContainer/RightPanel/VBox/DescLabel
@onready var detail_status = $BubbleContainer/RightPanel/VBox/StatusLabel
@onready var equip_button = $BubbleContainer/RightPanel/VBox/EquipButton

var selected_equipment = -1
var equipment_buttons: Array = []
var button_to_equip_index: Dictionary = {}  # æŒ‰é’®åˆ°è£…å¤‡ç´¢å¼•çš„æ˜ å°„

# è£…å¤‡åˆ†ç±»
enum EquipmentCategory {
	UNIVERSAL,    # é€šç”¨é“å…·
	CLASSIC,      # ç»å…¸æ¨¡å¼é“å…·
	SONG          # æ­Œæ›²æ¨¡å¼é“å…·
}

# è£…å¤‡æ•°æ®
var equipment_data = [
	# é€šç”¨é“å…·
	{
		"id": "faulty_score_amplifier",
		"category": EquipmentCategory.UNIVERSAL,
		"unlocked": true,
		"equipped": false
	},
	{
		"id": "rift_meter",
		"category": EquipmentCategory.UNIVERSAL,
		"unlocked": true,
		"equipped": false
	},
	# ç»å…¸æ¨¡å¼é“å…·
	{
		"id": "special_block_generator",
		"category": EquipmentCategory.CLASSIC,
		"unlocked": true,
		"equipped": true
	},
	{
		"id": "snake_virus",
		"category": EquipmentCategory.CLASSIC,
		"unlocked": true,
		"equipped": false
	},
	# æ­Œæ›²æ¨¡å¼é“å…·
	{
		"id": "beat_calibrator",
		"category": EquipmentCategory.SONG,
		"unlocked": true,
		"equipped": false
	}
]

const TEXTS = {
	"zh": {
		"title": "è£…å¤‡ç³»ç»Ÿ",
		"category_universal": "ã€é€šç”¨é“å…·ã€‘",
		"category_classic": "ã€ç»å…¸æ¨¡å¼é“å…·ã€‘",
		"category_song": "ã€æ­Œæ›²æ¨¡å¼é“å…·ã€‘",
		"faulty_score_amplifier": "æ•…éšœçš„è®¡åˆ†å¢å¹…å™¨",
		"faulty_score_amplifier_desc": "ã€æ•ˆæœã€‘\næ–¹å—åˆå§‹ä¸‹è½é€Ÿåº¦ Ã—105%\næ‰€æœ‰éè¿å‡»å¾—åˆ† Ã—120%\n\nã€æ³¨æ„ã€‘\nè¿å‡»åŠ åˆ†ä¸å—æ­¤æ•ˆæœå½±å“\né€Ÿåº¦åŠ æˆä¼šå åŠ éš¾åº¦é€Ÿåº¦åŠ æˆ",
		"rift_meter": "è£‚éš™ä»ª",
		"rift_meter_desc": "ã€æ•ˆæœã€‘\nä¸»åŠ¨é“å…·ï¼ŒæŒ‰ S é”®è§¦å‘\næ¶ˆé™¤æœ€åº•ä¸‹å·®ä¸€æ ¼æ¶ˆé™¤çš„è¡Œ\nï¼ˆæ¶ˆé™¤ä¸è®¡åˆ†ï¼‰\n\nã€å†·å´ã€‘\n45ç§’",
		"special_block_generator": "ç‰¹æ®Šæ–¹å—ç”Ÿæˆå™¨",
		"special_block_generator_desc": "ã€æ•ˆæœã€‘\næ¯æ¬¡ç”Ÿæˆæ–¹å—æ—¶ï¼Œæœ‰1.5%æ¦‚ç‡ç”Ÿæˆç‰¹æ®Šæ–¹å—\nï¼ˆ6æ¬¡ç”Ÿæˆå†·å´ï¼‰\n\nã€ç‰¹æ®Šæ–¹å—ç±»å‹ã€‘\nğŸ’£ ç‚¸å¼¹ï¼šæ¶ˆé™¤3Ã—3åŒºåŸŸ\nâ” æ¨ªå‘æ¿€å…‰ï¼šæ¶ˆé™¤æ•´è¡Œ\nâ”ƒ çºµå‘æ¿€å…‰ï¼šæ¶ˆé™¤æ•´åˆ—\n\nã€é‡åŠ›è§„åˆ™ã€‘\nåªæœ‰æ¶ˆé™¤æ•´è¡Œæ—¶æ‰ä¼šä¸‹è½\nç‚¸å¼¹å’Œçºµå‘æ¿€å…‰ä¸è§¦å‘ä¸‹è½\n\nã€è®¡åˆ†è§„åˆ™ã€‘\né¢å¤–æ¶ˆé™¤ +5åˆ†/æ ¼",
		"snake_virus": "è´ªåƒè›‡ç—…æ¯’",
		"snake_virus_desc": "ã€æ•ˆæœã€‘\næ¯æ¬¡ç”Ÿæˆæ–¹å—æ—¶ï¼Œæœ‰1%æ¦‚ç‡ç”Ÿæˆè´ªåƒè›‡\nï¼ˆ12æ¬¡ç”Ÿæˆå†·å´ï¼‰\n\nã€è´ªåƒè›‡è§„åˆ™ã€‘\nåˆå§‹3æ ¼é•¿ï¼Œæ¯å‡ºç°ä¸€æ¬¡+1æ ¼\nâ†‘â†“â†â†’ æ§åˆ¶æ–¹å‘\næ’åˆ°ä¸Šå£ï¼šæ¶ˆå¤±ï¼ˆæ”¾å¼ƒï¼‰\næ’åˆ°å·¦å³å£ï¼šä¼ é€è‡³å¦ä¸€è¾¹\næ’åˆ°å…¶ä»–æ–¹å—æˆ–åº•å£ï¼šå›ºå®šä¸ºæ–¹å—\n\nã€é¢„è§ˆæ¡†æ˜¾ç¤ºã€‘\n\"è´ªåƒè›‡\" å­—æ ·",
		"beat_calibrator": "èŠ‚æ‹æ ¡å¯¹å™¨(æœªå®ç°)",
		"beat_calibrator_desc": "ã€æ•ˆæœã€‘\nè®©æ­Œè¯æ–¹å—çš„è½åœ°æ—¶æœºä¸æ­Œè¯æ—¶é—´å¯¹åº”\n\nã€è¯„ä»·ç³»ç»Ÿã€‘\nPERFECT (Â±0.3s): åˆ†æ•°Ã—1.5\nGOOD (Â±0.8s): åˆ†æ•°Ã—1.0\nMISS (>0.8s): åˆ†æ•°Ã—0.5\n\nã€ä¸“å±è¿å‡»ã€‘\nMISSä¼šé‡ç½®è¿å‡»\nå…¶ä»–è¯„ä»·+1è¿å‡»\nï¼ˆè¿å‡»ä¸å½±å“è®¡åˆ†ï¼‰",
		"back": "è¿”å›",
		"equip": "è£…å¤‡",
		"unequip": "å¸ä¸‹",
		"equipped": "å·²è£…å¤‡",
		"locked": "æœªè§£é”",
		"slot_limit": "ï¼ˆæ¯ç±»åªèƒ½è£…å¤‡1ä¸ªï¼‰"
	},
	"en": {
		"title": "Equipment",
		"category_universal": "[UNIVERSAL]",
		"category_classic": "[CLASSIC MODE]",
		"category_song": "[SONG MODE]",
		"faulty_score_amplifier": "Faulty Score Amplifier",
		"faulty_score_amplifier_desc": "[Effect]\nInitial fall speed Ã—105%\nAll non-combo scores Ã—120%\n\n[Note]\nCombo bonus is not affected\nSpeed boost stacks with difficulty",
		"rift_meter": "Rift Meter",
		"rift_meter_desc": "[Effect]\nActive item, press S to trigger\nClears the bottom-most row that is\nmissing one block\n(No score for clearing)\n\n[Cooldown]\n45 seconds",
		"special_block_generator": "Special Block Generator",
		"special_block_generator_desc": "[Effect]\n1.5% chance to spawn special block\n(6 spawn cooldown)\n\n[Special Block Types]\nğŸ’£ Bomb: Clears 3Ã—3 area\nâ” H-Laser: Clears entire row\nâ”ƒ V-Laser: Clears entire column\n\n[Gravity Rules]\nOnly full row clears cause drops\nBomb and V-Laser don't trigger drops\n\n[Scoring]\nExtra cells cleared: +5 pts/cell",
		"snake_virus": "Snake Virus",
		"snake_virus_desc": "[Effect]\n1% chance to spawn snake\n(12 spawn cooldown)\n\n[Snake Rules]\nStarts at 3 cells, +1 each spawn\nâ†‘â†“â†â†’ to control direction\nHit top wall: disappears\nHit left/right wall: wraps around\nHit blocks/bottom: becomes blocks\n\n[Preview]\nShows \"Snake\" text",
		"beat_calibrator": "Beat Calibrator",
		"beat_calibrator_desc": "[Effect]\nSyncs block landing with lyrics timing\n\n[Rating System]\nPERFECT (Â±0.3s): ScoreÃ—1.5\nGOOD (Â±0.8s): ScoreÃ—1.0\nMISS (>0.8s): ScoreÃ—0.5\n\n[Beat Combo]\nMISS resets combo\nOther ratings +1 combo\n(Combo doesn't affect score)",
		"back": "Back",
		"equip": "Equip",
		"unequip": "Unequip",
		"equipped": "Equipped",
		"locked": "Locked",
		"slot_limit": "(1 per category)"
	}
}

func _ready():
	# ä»GlobalåŠ è½½è£…å¤‡çŠ¶æ€
	_load_equipment_state()
	update_ui_texts()
	populate_equipment_list()
	bubble_container.visible = false
	back_button.pressed.connect(_on_back_pressed)
	equip_button.pressed.connect(_on_equip_pressed)

func _load_equipment_state():
	"""ä»GlobalåŠ è½½è£…å¤‡çŠ¶æ€"""
	for equip in equipment_data:
		if equip.id == "special_block_generator":
			equip.equipped = Global.equipment_classic_special_block
		elif equip.id == "faulty_score_amplifier":
			equip.equipped = Global.equipment_universal_faulty_amplifier
		elif equip.id == "rift_meter":
			equip.equipped = Global.equipment_universal_rift_meter
		elif equip.id == "snake_virus":
			equip.equipped = Global.equipment_classic_snake_virus
		elif equip.id == "beat_calibrator":
			equip.equipped = Global.equipment_song_beat_calibrator

func _save_equipment_state():
	"""ä¿å­˜è£…å¤‡çŠ¶æ€åˆ°Global"""
	for equip in equipment_data:
		if equip.id == "special_block_generator":
			Global.equipment_classic_special_block = equip.equipped
		elif equip.id == "faulty_score_amplifier":
			Global.equipment_universal_faulty_amplifier = equip.equipped
		elif equip.id == "rift_meter":
			Global.equipment_universal_rift_meter = equip.equipped
		elif equip.id == "snake_virus":
			Global.equipment_classic_snake_virus = equip.equipped
		elif equip.id == "beat_calibrator":
			Global.equipment_song_beat_calibrator = equip.equipped

func update_ui_texts():
	var texts = TEXTS[Global.current_language]
	title_label.text = texts["title"]
	back_button.text = texts["back"]

func populate_equipment_list():
	# æ¸…ç©ºç°æœ‰é¡¹
	for child in equipment_list.get_children():
		child.queue_free()
	equipment_buttons.clear()
	button_to_equip_index.clear()
	
	var texts = TEXTS[Global.current_language]
	var font = load("res://fonts/FUSION-PIXEL-12PX-MONOSPACED-ZH_HANS.OTF")
	
	# æŒ‰åˆ†ç±»ç»„ç»‡è£…å¤‡
	var categories = [
		{"type": EquipmentCategory.UNIVERSAL, "key": "category_universal"},
		{"type": EquipmentCategory.CLASSIC, "key": "category_classic"},
		{"type": EquipmentCategory.SONG, "key": "category_song"}
	]
	
	for cat in categories:
		var category_items = []
		for i in range(equipment_data.size()):
			if equipment_data[i].category == cat.type:
				category_items.append({"index": i, "data": equipment_data[i]})
		
		# æ·»åŠ åˆ†ç±»æ ‡é¢˜
		var cat_label = Label.new()
		cat_label.text = texts[cat.key]
		cat_label.add_theme_font_override("font", font)
		cat_label.add_theme_font_size_override("font_size", 16)
		cat_label.add_theme_color_override("font_color", Color(0.7, 0.7, 0.9, 1))
		equipment_list.add_child(cat_label)
		
		if category_items.is_empty():
			# æ— è£…å¤‡æç¤º
			var empty_label = Label.new()
			empty_label.text = "  -"
			empty_label.add_theme_font_override("font", font)
			empty_label.add_theme_font_size_override("font_size", 14)
			empty_label.add_theme_color_override("font_color", Color(0.5, 0.5, 0.5, 1))
			equipment_list.add_child(empty_label)
		else:
			for item in category_items:
				var equip = item.data
				var button = Button.new()
				var equip_name = texts.get(equip.id, equip.id)
				
				# æ˜¾ç¤ºè£…å¤‡çŠ¶æ€ï¼ˆæ–‡å­—å±…ä¸­ï¼‰
				if equip.equipped:
					button.text = equip_name + " âœ“"
				elif not equip.unlocked:
					button.text = equip_name + " ğŸ”’"
				else:
					button.text = equip_name
				
				button.custom_minimum_size = Vector2(300, 40)
				button.alignment = HORIZONTAL_ALIGNMENT_CENTER  # æ–‡å­—å±…ä¸­
				button.add_theme_font_override("font", font)
				button.add_theme_font_size_override("font_size", 16)
				
				# æ ¹æ®çŠ¶æ€è®¾ç½®é¢œè‰²
				if equip.equipped:
					button.add_theme_color_override("font_color", Color(0.5, 1, 0.5, 1))
				elif not equip.unlocked:
					button.add_theme_color_override("font_color", Color(0.5, 0.5, 0.5, 1))
				else:
					button.add_theme_color_override("font_color", Color(1, 1, 1, 1))
				
				var equip_index = item.index
				button.pressed.connect(func(): _on_equipment_selected(equip_index))
				
				equipment_list.add_child(button)
				equipment_buttons.append(button)
				button_to_equip_index[button] = equip_index

func _on_equipment_selected(index: int):
	selected_equipment = index
	var texts = TEXTS[Global.current_language]
	var equip = equipment_data[index]
	
	detail_name.text = texts.get(equip.id, equip.id)
	detail_desc.text = texts.get(equip.id + "_desc", "")
	
	# æ›´æ–°çŠ¶æ€æ ‡ç­¾
	if equip.equipped:
		detail_status.text = texts["equipped"]
		detail_status.add_theme_color_override("font_color", Color(0.5, 1, 0.5, 1))
		equip_button.text = texts["unequip"]
		equip_button.disabled = false
	elif not equip.unlocked:
		detail_status.text = texts["locked"]
		detail_status.add_theme_color_override("font_color", Color(0.5, 0.5, 0.5, 1))
		equip_button.text = texts["equip"]
		equip_button.disabled = true
	else:
		detail_status.text = texts["slot_limit"]
		detail_status.add_theme_color_override("font_color", Color(0.8, 0.8, 0.8, 1))
		equip_button.text = texts["equip"]
		equip_button.disabled = false
	
	# æ›´æ–°æ°”æ³¡ç®­å¤´ä½ç½®
	_update_bubble_position(index)
	_show_bubble()

func _update_bubble_position(equip_index: int):
	"""æ ¹æ®è£…å¤‡ç´¢å¼•æ‰¾åˆ°å¯¹åº”æŒ‰é’®å¹¶æ›´æ–°æ°”æ³¡ä½ç½®"""
	for btn in button_to_equip_index.keys():
		if button_to_equip_index[btn] == equip_index:
			var button_center_y = btn.global_position.y + btn.size.y / 2
			var bubble_global_y = bubble_container.global_position.y
			var arrow_local_y = button_center_y - bubble_global_y
			
			bubble_arrow.polygon = PackedVector2Array([
				Vector2(-20, arrow_local_y),
				Vector2(0, arrow_local_y - 15),
				Vector2(0, arrow_local_y + 15)
			])
			break

func _show_bubble():
	if not bubble_container.visible:
		bubble_container.visible = true
		bubble_container.modulate.a = 0.0
		bubble_container.scale = Vector2(0.9, 0.9)
		
		var bubble_tween = create_tween()
		bubble_tween.set_parallel(true)
		bubble_tween.tween_property(bubble_container, "modulate:a", 1.0, 0.2).set_ease(Tween.EASE_OUT)
		bubble_tween.tween_property(bubble_container, "scale", Vector2(1.0, 1.0), 0.2).set_ease(Tween.EASE_OUT).set_trans(Tween.TRANS_BACK)

func _on_equip_pressed():
	if selected_equipment < 0:
		return
	
	var equip = equipment_data[selected_equipment]
	if not equip.unlocked:
		return
	
	if equip.equipped:
		# å¸ä¸‹è£…å¤‡
		equip.equipped = false
	else:
		# è£…å¤‡å‰å…ˆå¸ä¸‹åŒåˆ†ç±»çš„å…¶ä»–è£…å¤‡
		for other_equip in equipment_data:
			if other_equip.category == equip.category and other_equip.equipped:
				other_equip.equipped = false
		equip.equipped = true
	
	_save_equipment_state()
	
	# åˆ·æ–°ç•Œé¢
	populate_equipment_list()
	_on_equipment_selected(selected_equipment)

func _on_back_pressed():
	get_tree().change_scene_to_file("res://UI/MainMenu.tscn")
